<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:strokeColor="@color/orange_500"
    app:strokeWidth="2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_scheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_scheme_network"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:textColor="@color/orange_500"
            />

        <TextView
            android:id="@+id/tv_scheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_scheme"
            app:layout_constraintStart_toStartOf="@id/tv_title_scheme"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scheme"
            />

        <TextView
            android:id="@+id/tv_title_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_type"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/orange_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_type"
            app:layout_constraintStart_toStartOf="@id/tv_title_type"
            app:layout_constraintEnd_toEndOf="@id/tv_title_type"
            />

        <TextView
            android:id="@+id/tv_title_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_brand"
            android:textColor="@color/orange_500"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_scheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_brand"
            app:layout_constraintStart_toStartOf="@id/tv_title_brand"
            app:layout_constraintEnd_toEndOf="@id/tv_title_brand"
            />

        <TextView
            android:id="@+id/tv_title_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_prepaid"
            android:textColor="@color/orange_500"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_yes_no"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_prepaid"
            app:layout_constraintStart_toStartOf="@id/tv_title_prepaid"
            app:layout_constraintEnd_toEndOf="@id/tv_title_prepaid"
            />

        <TextView
            android:id="@+id/tv_title_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_card_number"
            android:textColor="@color/orange_500"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_brand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_title_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_length"
            android:textColor="@color/orange_500"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_card_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title_luhn"
            />

        <TextView
            android:id="@+id/tv_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_length"
            app:layout_constraintStart_toStartOf="@id/tv_title_length"
            />

        <TextView
            android:id="@+id/tv_title_luhn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_luhn"
            android:textColor="@color/orange_500"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_card_number"
            app:layout_constraintStart_toEndOf="@id/tv_title_length"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_luhn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_yes_no"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_luhn"
            app:layout_constraintStart_toStartOf="@id/tv_title_luhn"
            app:layout_constraintEnd_toEndOf="@id/tv_title_luhn"
            />

        <TextView
            android:id="@+id/tv_title_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_country"
            android:textColor="@color/orange_500"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_prepaid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_country"
            app:layout_constraintStart_toStartOf="@id/tv_title_country"
            app:layout_constraintEnd_toEndOf="@id/tv_title_country"
            />

        <TextView
            android:id="@+id/tv_title_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"
            android:textColor="@color/orange_500"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toEndOf="@id/tv_title_latitude"
            app:layout_constraintEnd_toStartOf="@id/tv_title_longitude"
            />

        <TextView
            android:id="@+id/tv_title_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_longitude"
            android:textColor="@color/orange_500"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toEndOf="@id/tv_latitude"
            app:layout_constraintEnd_toStartOf="@id/tv_longitude"
            />

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toEndOf="@id/tv_title_longitude"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_title_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_bank"
            android:gravity="center"
            android:textColor="@color/orange_500"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_luhn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_question"
            android:gravity="center"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/text_question"
            app:layout_constraintTop_toBottomOf="@id/tv_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_question"
            app:layout_constraintTop_toBottomOf="@id/tv_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>