<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFD6C7"
    tools:context=".feature_binlist.presentation.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/blue_800"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:hint="Введите первые 4 цифры карты (BIN/IIN)"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_search_24"
        app:layout_constraintBottom_toBottomOf="@id/til_bin"
        app:layout_constraintEnd_toEndOf="@id/til_bin"
        app:layout_constraintTop_toTopOf="@id/til_bin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_scheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/til_bin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_scheme_network"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_bin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_type"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cv_scheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/tv_title_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_brand"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:gravity="center"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_prepaid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cv_type"
        app:layout_constraintBottom_toBottomOf="@id/cv_brand"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_prepaid"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_yes_no"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cv_brand"
        app:layout_constraintBottom_toBottomOf="@id/cv_country">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_card_number"
                android:textColor="@color/orange_500"
                />

                <TextView
                    android:id="@+id/tv_title_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_length"
                    android:textColor="@color/orange_500"
                    />

                <TextView
                    android:id="@+id/tv_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question"
                    android:textColor="@color/orange_500"
                    />

                <TextView
                    android:id="@+id/tv_title_luhn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_luhn"
                    android:textColor="@color/orange_500"
                    />

                <TextView
                    android:id="@+id/tv_luhn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_yes_no"
                    android:textColor="@color/orange_500"
                    />
            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_country"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_prepaid"
        app:layout_constraintBottom_toBottomOf="@id/cv_card_number"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_country"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_title_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_latitude"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_title_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_longitude"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_country"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_title_bank"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/text_question"
                android:textColor="@color/orange_500"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>